Revert "IGNITE-19436 Add "--add-opens=java.base/java.time=ALL-UNNAMED" to jvm args"
This reverts commit 36ead59d06cfc9129ddedaf258dfd88dfdeabfb9.